--- a/configs/config/hparams/surgvu/finetuning/imagenet_to_surgvu/25/imagenet_fully_supervised.yaml
+++ b/configs/config/hparams/surgvu/finetuning/imagenet_to_surgvu/25/imagenet_fully_supervised.yaml
@@ -8,7 +8,7 @@ config:
   LOG_FREQUENCY: 10
   TEST_ONLY: False
   TEST_MODEL: True
-  TEST_EVERY_NUM_EPOCH: 10 # how often to test the model during training (in epochs) - validation
+  TEST_EVERY_NUM_EPOCH: 1 # how often to test the model during training (in epochs) - validation
   FEATURE_EXTRACT: Head
   SEED_VALUE: 0
   MULTI_PROCESSING_METHOD: forkserver
@@ -33,7 +33,7 @@ config:
           crop_right: 200
           crop_top: 50
           crop_bottom: 50
-        - name: Resize # TODO match with surgvu
+        - name: Resize
           size: 256
         - name: RandAugmentSurgery
           magnitude: 8.0
@@ -55,33 +55,9 @@ config:
       COPY_TO_LOCAL_DISK: False
       DATA_LIMIT: -1
       DROP_LAST: True
-    VAL:
-      DATA_PATHS: ["/net/tscratch/people/plgjmachali/surgvu_data_sampled_03/val"]
-      LABEL_PATHS: [/net/pr2/projects/plgrid/plgg_13/sources/SelfSupSurg/datasets/surgvu/labels/0_3fps/val.pkl]
-      DATA_SOURCES: [disk_filelist_surgvu]
-      LABEL_SOURCES: [disk_filelist_surgvu]
-      DATASET_NAMES: [surgvu_dataset]
-      BATCHSIZE_PER_REPLICA: 64
-      LABEL_TYPE: standard
-      TRANSFORMS:
-        - name: CropSides
-          crop_left: 200
-          crop_right: 200
-          crop_top: 50
-          crop_bottom: 50
-        - name: Resize # TODO match with surgvu
-          size: 256
-        - name: ToTensor
-        - name: Normalize
-          mean: [0.485, 0.456, 0.406]
-          std: [0.229, 0.224, 0.225]
-      MMAP_MODE: True
-      COPY_TO_LOCAL_DISK: False
-      DATA_LIMIT: -1
-      DROP_LAST: False
     TEST:
-      DATA_PATHS: ["/net/tscratch/people/plgjmachali/surgvu_data_sampled_03/test"]
-      LABEL_PATHS: [/net/pr2/projects/plgrid/plgg_13/sources/SelfSupSurg/datasets/surgvu/labels/0_3fps/test.pkl]
+      DATA_PATHS: ["/net/tscratch/people/plgjmachali/surgvu_data_sampled_03/val"]
+      LABEL_PATHS: ["/net/pr2/projects/plgrid/plgg_13/sources/SelfSupSurg/datasets/surgvu/labels/0_3fps/val.pkl"]
       DATA_SOURCES: [disk_filelist_surgvu]
       LABEL_SOURCES: [disk_filelist_surgvu]
       DATASET_NAMES: [surgvu_dataset]
@@ -93,7 +69,7 @@ config:
           crop_right: 200
           crop_top: 50
           crop_bottom: 50
-        - name: Resize # TODO match with surgvu
+        - name: Resize
           size: 256
         - name: ToTensor
         - name: Normalize
@@ -104,11 +80,13 @@ config:
       DATA_LIMIT: -1
       DROP_LAST: False
   METERS:
-    # names: [accuracy_list_meter, mean_ap_list_meter, precision_at_k_list_meter, recall_at_k_list_meter]
-    names: [accuracy_list_meter]
+    names: [accuracy_list_meter, f1_score_list_meter]
     accuracy_list_meter:
       num_meters: 1
       topk_values: [1]
+    f1_score_list_meter:
+      num_meters: 1
+      num_classes: 8
   MODEL:
     TRUNK:
       NAME: resnet
@@ -139,7 +117,7 @@ config:
       ignore_index: -1
   OPTIMIZER:
       name: sgd
-      weight_decay: 0.000001
+      weight_decay: 0.0002
       momentum: 0.9
       nesterov: False
       num_epochs: 120
@@ -147,21 +125,19 @@ config:
       regularize_bias: True
       param_schedulers:
         lr:
-          auto_lr_scaling:
-            auto_scale: true
-            base_value: 0.005
-            base_lr_batch_size: 256
           name: composite
-          schedulers:
-            - name: linear
-              start_value: 0.6
-              end_value: 4.8
-            - name: cosine
-              start_value: 4.8
-              end_value: 0.0000
           update_interval: step
-          interval_scaling: [rescaled, fixed]
-          lengths: [0.05, 0.95]
+          auto_lr_scaling:
+            auto_scale: false
+          schedulers:
+            - name: linear          # warm-up 10%
+              start_value: 0.0075   # ~0.5 × 0.015
+              end_value:   0.010    # peak
+            - name: cosine          # decay 90%
+              start_value: 0.015
+              end_value:   0.0005
+          interval_scaling: [rescaled, rescaled]
+          lengths: [0.10, 0.90]
   DISTRIBUTED:
     BACKEND: nccl
     NUM_NODES: 1
@@ -173,7 +149,7 @@ config:
   CHECKPOINT:
     DIR: "${SCRATCH}/surgvu_results/finetuning/imagenet_to_surgvu/series_01/test/phase/100/0/checkpoints_${SLURM_JOB_ID:-local}"
     AUTO_RESUME: True
-    CHECKPOINT_FREQUENCY: 10
+    CHECKPOINT_FREQUENCY: 1
     OVERWRITE_EXISTING: False
   HOOKS:
     TENSORBOARD_SETUP:
