--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,5 @@ model_final_checkpoint_moco_v2_surg.torch
 model_final_checkpoint_simclr_surg.torch
 model_final_checkpoint_swav_surg.torch
 
+/*.sh
+results/experiments/
